# mjjssh

./: .gitattributes  .gitignore  README-en.md  readme.md  scripts.md
.github/workflows/: windows.yml
docs/: ai.md  components.md  db.md  dev.md  feature-roadmap.md
my-ssh-frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
my-ssh-frontend/src/: App.vue  style.css
my-ssh-frontend/src-tauri/: Cargo.toml  tauri.conf.json
my-ssh-frontend/src-tauri/capabilities/: default.json
my-ssh-frontend/src-tauri/icons/: icon.icns
my-ssh-frontend/src-tauri/src/: lib.rs  main.rs  state.rs  subscriptions.rs
my-ssh-frontend/src-tauri/src/ai/: audit.rs  client.rs  log.rs  mod.rs  models.rs  risk_confirmation.rs  service.rs
my-ssh-frontend/src-tauri/src/commands/: ai.rs  diagnostics.rs  mod.rs  scripts.rs  sftp.rs  ssh.rs  subscriptions.rs  sync.rs  vault.rs
my-ssh-frontend/src-tauri/src/diagnostics/: export.rs  log.rs  mod.rs  report.rs
my-ssh-frontend/src-tauri/src/ssh/: client.rs  known_hosts.rs  mod.rs
my-ssh-frontend/src-tauri/src/sync/: crypto.rs  gitee_snippet.rs  github_gist.rs  mod.rs  models.rs  service.rs  state.rs
my-ssh-frontend/src-tauri/src/vault/: crypto.rs  db.rs  mod.rs  models.rs  store.rs
my-ssh-frontend/src-tauri/tests/: ai_command_parser.rs  gitee_snippet_live_sync.rs  github_gist_live_sync.rs  openai_compatible_stream.rs
my-ssh-frontend/src-tauri/tests/fixtures/: disk_diagnostics.sh
my-ssh-frontend/src/components/: ActionDialog.vue  AiChatPanel.vue  AiSettings.vue  ConnectionDialog.vue  EntityCard.vue  KeysView.vue  PermissionsDialog.vue  ScriptPanel.vue  ScriptsView.vue  SftpView.vue  SyncSettings.vue  Terminal.vue  TransferPanel.vue
my-ssh-frontend/src/composables/: useLocale.ts
my-ssh-frontend/src/locales/: en-US.ts  zh-CN.ts
my-ssh-frontend/src/router/: index.ts
my-ssh-frontend/src/stores/: ai.ts  scripts.ts  session.ts  transfer.ts  vault.ts
my-ssh-frontend/src/types/: ai.ts  index.ts  scripts.ts
subs/: sub_main.jsonl
