[package]
name = "mjj-ssh"
version = "0.1.0"
description = "A multi-window SSH client with optional encrypted cloud sync"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# OpenAI-compatible client (chat completions, SSE, and tool calling)
async-openai = "0.26"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# SSH
russh = { version = "0.62", default-features = false, features = ["ring"] }
russh-sftp = "2.1.0"
ssh-key = { version = "0.7.0-rc.11", features = ["ed25519", "rand_core", "rsa"] }
rand = "0.8"
getrandom = "0.4"
rand_chacha = "0.10"

# Cloud sync encryption
# These protect only the separately uploaded remote Vault envelope.
aes-gcm = "0.11"
argon2 = "0.6.0-rc.8"
base64 = "0.22"
sha2 = "0.10"
md5 = "0.7"

# Shell command parsing
# Keep authorization based on parsed command nodes rather than shell text heuristics.
tree-sitter = "0.25"
tree-sitter-bash = "0.25.1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
zeroize = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
